--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,4 +1,7 @@
 .app-dark-theme {
-  --bg-color: #242424;
-  --primary-color: #c4d0e3;
+  --bg-color: #11001c;
+  --primary-color: #0077b6;
+  --secondary-color: #013a63;
+  --text-color: #e9ecef;
+  --button-color: #e9ecef;
 }
