--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,4 +1,7 @@
 :root {
-  --bg-color: rgb(255 255 255 / 87%);
-  --primary-color: #193219;
+  --bg-color: #f8f9fa;
+  --primary-color: #40916c;
+  --secondary-color: #1b4332;
+  --text-color: #212529;
+  --button-color: #e9ecef;
 }
