--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,11 +1,16 @@
-@import "./themes/normal";
-@import "./themes/dark";
-@import "./reset";
-@import "./variables/global";
+@import './themes/normal';
+@import './themes/dark';
+@import './reset';
+@import './variables/global';
 
 .app {
   font: var(--font-m);
-  color: var(--primary-color);
+  color: var(--text-color);
   background-color: var(--bg-color);
   min-height: 100vh;
+}
+
+.container {
+  max-width: var(--container-width);
+  margin: 0 auto;
 }
