--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -15,4 +15,5 @@
   --font-size-l: 24px;
   --font-line-l: 32px;
   --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
+  --container-width: 1100px;
 }
