added modal with stories

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,7 +3,7 @@
 @import './reset';
 @import './variables/global';
 
-.app {
+#app {
   font: var(--font-m);
   color: var(--text-color);
   background-color: var(--bg-color);
