--- a/src/shared/ui/Stack/Flex/Flex.module.scss
+++ b/src/shared/ui/Stack/Flex/Flex.module.scss
@@ -43,19 +43,19 @@
 }
 
 .gap8 {
-  gap: 8;
+  gap: 8px;
 }
 
 .gap16 {
-  gap: 16;
+  gap: 16px;
 }
 
 .gap24 {
-  gap: 24;
+  gap: 24px;
 }
 
 .gap32 {
-  gap: 32;
+  gap: 32px;
 }
 
 .nowrap {
