--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,7 +1,7 @@
 :root {
-  --bg-color: #f8f9fa;
-  --primary-color: #40916c;
-  --secondary-color: #1b4332;
-  --text-color: #212529;
+  --bg-color: #f3e0b5;
+  --primary-color: #b72119;
+  --secondary-color: #223039;
+  --text-color: #223039;
   --button-color: #e9ecef;
 }
