--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -2,9 +2,18 @@
   cursor: pointer;
   background: none;
   border: none;
-  padding: 8px 16px;
+  padding: 12px 20px;
   color: var(--button-color);
-  background-color: var(--primary-color);
-  border-radius: 12px;
-  transition: background-color 0.3s;
+  border-radius: 3px;
+  transition: all 0.3s;
+  background-color: transparent;
+  background-image: url('../../assets/images/button.webp');
+  text-transform: uppercase;
+  font-weight: 700;
+
+  &:hover {
+    background-color: white;
+    color: var(--primary-color);
+    background-blend-mode: lighten;
+  }
 }
