--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -1,7 +1,8 @@
 .Navbar {
   width: 100%;
   padding: 16px 0;
-  border-bottom: 1px solid rgba(34, 48, 57, 0.2);
+  border-bottom: 1px solid rgb(34 48 57 / 20%);
+
   // background-color: var(--secondary-color);
 }
 
