--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -15,7 +15,7 @@
 
 .label {
   display: inline-block;
-  color: rgb(255, 255, 255);
+  color: rgb(255 255 255);
   font-weight: 700;
   margin-bottom: 8px;
 }
