--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -1,7 +1,15 @@
 :root {
-  --bg-color: #f3e0b5;
-  --primary-color: #b72119;
-  --secondary-color: #223039;
+  --primary-color: #13A6BA;
+  --primary-shade: #C8F3F9;
+  --secondary-color: #F93633;
+  --accent-1: #B3C41D;
+  --accent-2: #FBEDDA;
+  --accent-3: #772D8B;
+  --black: #021112;
+  --black-shade: #677071;
+  --black-shade-2: #CCCFD0;
+  --black-shade-3: #E0E2E3;
   --text-color: #223039;
   --button-color: #e9ecef;
+  --white: #fff;
 }
