--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,5 +1,5 @@
 :root {
-  --font-family-main: 'Roboto', sans-serif;
+  --font-family-main: 'Noto Serif', serif;
 
   // s
   --font-size-s: 12px;
@@ -15,5 +15,7 @@
   --font-size-l: 24px;
   --font-line-l: 32px;
   --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
-  --container-width: 1100px;
+  --container-width: 1200px;
+  --header-height: 70px;
+  --dropdown-box-shadow: 0px 0px 8px 0px rgb(34 60 80 / 20%);
 }
