--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,19 +1,29 @@
 .Button {
   cursor: pointer;
-  background: none;
   border: none;
-  padding: 12px 20px;
-  color: var(--button-color);
-  border-radius: 3px;
-  transition: all 0.3s;
-  background-color: transparent;
-  background-image: url('../../assets/images/button.webp');
-  text-transform: uppercase;
-  font-weight: 700;
+  padding: 10px 24px;
+  color: var(--white);
+  background-color: var(--primary-color);
+  border-radius: 8px;
+  font-weight: 600;
 
   &:hover {
-    background-color: white;
-    color: var(--primary-color);
-    background-blend-mode: lighten;
+    background-color: #178c9b;
   }
+}
+
+.disabled {
+  opacity: .6;
+  cursor: not-allowed;
+
+  &:hover {
+    background-color: var(--primary-color);
+  }
+}
+
+.isLoading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
